# VizMa

./: .gitignore  CMakeLists.txt  LICENSE  Main.cpp  testing.cpp
VizMa/: VizMa.hpp
